# internal/module/album/album.router.go
@@ -1,3 +1,17 @@
 package album
 
-func NewAlbumRouter(){}
+import (
+	"github.com/LeMinh0706/lala-song/token"
+	"github.com/gofiber/fiber/v2"
+)
+
+func NewAlbumRouter(f fiber.Router, service IAlbumService, token token.Maker) {
+	ac := NewAlBumController(service)
+	albumGroup := f.Group("/albums")
+	{
+
+	}
+	{
+		albumGroup.Post("", ac.CreateAlbum)
+	}
+}
